Fix link :active overflow issue

--- a/moj-node/assets/sass/components/_landing-page-header.scss
+++ b/moj-node/assets/sass/components/_landing-page-header.scss
@@ -62,6 +62,7 @@
       display: block;
       margin: 0 0 govuk-spacing(4) 0;
       a {
+        display: inline-block;
         @include govuk-font($size: 19);
       }
     }
